compiler/testData/diagnostics/tests/invalidTargetCrashesCompiler.fir.kt
// ISSUE: KT-59110

<!WRONG_ANNOTATION_TARGET!>@Target(<!ARGUMENT_TYPE_MISMATCH!>{}<!>)<!>
interface SomeInterface {
}
